--- a/style.css
+++ b/style.css
@@ -146,6 +146,72 @@ footer {
   font-size: 16px;
 }
 
+
+.education-list {
+  list-style-type: none;
+  padding: 0;
+}
+
+.education-list li {
+  margin-bottom: 20px;
+}
+
+.education-list h3 {
+  font-size: 18px;
+  color: #333; /* Text color */
+  margin-bottom: 5px;
+}
+
+.education-list h4 {
+  font-size: 16px;
+  color: #666; /* Subtitle color */
+  margin-bottom: 5px;
+}
+
+.education-list h5 {
+  font-size: 14px;
+  color: #999; /* Additional details color */
+  margin-bottom: 5px;
+}
+
+.education-list p {
+  font-size: 16px;
+  color: #444; /* Date color */
+  margin-bottom: 10px;
+}
+
+/* Seminar Section Styles */
+#seminars {
+  padding: 40px;
+  margin-bottom: 40px;
+  background-color: #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+}
+
+.seminar-list {
+  list-style-type: none;
+  padding: 0;
+}
+
+.seminar-list li {
+  margin-bottom: 20px;
+}
+
+.seminar-list h3 {
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  color: #333;
+}
+
+.seminar-list p {
+  font-size: 16px;
+  color: #666;
+  margin-bottom: 10px;
+}
+
+
 /* Skills Section Styles */
 .skills-list {
   margin-top: 20px;
@@ -210,6 +276,7 @@ footer {
 #tarpaulin-edits {
   padding: 40px 0;
 }
+
 
 .gallery {
   display: grid;
